# HamCC

./: .gitignore  BUILD_INSTRUCTIONS.md  HOSTILOG_SHORTCUTS.md  LICENSE  Makefile  README.md  build.bat  main.py  make.bat  pyproject.toml  requirements.txt  setup_win.py
.github/workflows/: python-test.yml
src/hamcc/: __init__.py  __main__.py  _console_.py  hamcc.py
src/hamcc/data/: bands.json  modes.json
test/: test_append_char.py  test_evaluate.py  test_evaluate_event.py  test_instantiate.py
